Removing unnecessary /aj/ prefix requirement

--- a/src/AuthJanitor.AspNet.AdminUi/wwwroot/index.html
+++ b/src/AuthJanitor.AspNet.AdminUi/wwwroot/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>AuthJanitor Administration Tool</title>
-    <base href="/aj/" />
+    <base href="/" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
